--- a/src/styles.css
+++ b/src/styles.css
@@ -1,68 +1,207 @@
+@media (max-width: 500px) {
+    .fa-flip{
+        font-size: 4px;
+    }
 
-.hello{
-color: rgb(255, 255, 255)!important;
-display: block;
-font-family: sans-serif;
-font-size: 42.6667px;
-height: 96px;
-line-height: 48px;
-margin-bottom: 20px;
-margin-left: 0px;
-margin-right: 0px;
-margin-top: 0px;
-text-align: center;
-}
-
-h1 .adeola-name{
-    color: rgb(227, 27, 109);
-display: inline;
-font-family: sans-serif;
-font-size: 42.6667px;
-height: auto;
-line-height: 48px;
-text-align: center;
-
-}
-
-.page-hero{
-    margin-top: 250px;
-    text-align: center;
-
-}
-
-.myJourney{
-    display: block;
-    margin: auto;
-    padding: 7px 50px;
-    border: 2px solid white;
-    background-color: #252934;
-    color: white;
-    font-size: 25px;
-    margin-top: 30px;
-
-}
-.header-links{
-    margin-top: 250px;
-    background-color: #1B242F;
+    .button-all{
+        font-size: 16px;
+        display: flex;
+        text-align: right;
+       
+    }
     
 }
 
- a{
-    padding-left: 80px;
+
+h1{
+    margin-bottom: 50px;
+}
+
+.container_img{
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+
+
+
+:root {
+    --secondary-color: #151226;
+    --contrast-color: #BF307F;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    z-index: -10;
+    background-color: var(--contrast-color);
+}
+
+.container {
+    display: flex;
+    height: 100vh;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    animation: expand .8s ease forwards;
+    background-color: var(--secondary-color);
+    margin-top:10;
+    position: relative;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: all .8s ease;
+    padding-top: 0;
+    margin-bottom: 0;
+
+}
+
+.container_content {
+    width: 100%;
+    margin-top: 0;
+}
+
+.container_content_inner {
+    width: 85%;
+    margin-left: 30px;
+    padding-top: 0;
+}
+
+.container_outer_img {
+    margin: 30px;
+    width: 85%;
+    overflow: hidden;
+}
+
+.container_img {
+    width: 100%;
+    animation: slideIn 1.0s ease-in-out forwards;
+    max-width: 600px;
+}
+
+.par{
+    height: auto;
+    overflow: hidden;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 60px;
+    
+}
+
+p {
+    line-height: 28px;
+    transform: translateY(300px);
+    animation: slideUp .6s ease-in-out forwards .8s;
+}
+
+.btns {
+    height: 100%;
+    position: relative;
+    width: 150px;
+    overflow: hidden;
+}
+
+.button-all{
+    height: 100%;
+        position: relative;
+        width: 150px;
+        overflow: hidden;
+        margin-bottom: 10px;
+        background: transparent;
+            border: 1px solid var(--contrast-color);
+            border-radius: 50px;
+            padding: 8px 12px;
+            color: #BF307F;
+            font-size: 25px;
+            text-transform: uppercase;
+            position: relative;
+            margin-top: 15px;
+            outline: none;
+            transform: translateY(50px);
+            animation: slideUp .8s ease-in-out forwards 1s;
+
+}
+
+.button-all:hover {
+
+    background-color: var(--secondary-color);
+    padding-top: 0;
     text-decoration: none;
-    color: white;
+    margin-top: 30px;
+    margin-bottom: 0;
+   
+    
 }
 
-.active{
-    color: rgb(227, 27, 109);
+.button-all a{
+    text-decoration: none;
+   
+}
+
+.btns_more {
+    background: transparent;
+    border: 1px solid var(--contrast-color);
+    border-radius: 50px;
+    padding: 8px 12px;
+    color: #BF307F;
+    font-size: 16px;
+    text-transform: uppercase;
+    position: relative;
+    margin-top: 15px;
+    outline: none;
+    transform: translateY(50px);
+    animation: slideUp .8s ease-in-out forwards 1s;
+}
+
+.title {
+    overflow: hidden;
+    height: auto;
+}
+
+h1 {
+    font-size: 40px;
+    color: var(--contrast-color);
+    margin-bottom: 20px;
+    transform: translateY(100px);
+    animation: slideUp .20s ease forwards .25s;
+    margin-top: -10px;
  
+    
 }
 
-body{
-    background-color: #252934;
+@keyframes slideIn {
+    0% {
+        transform: translateX(500px) scale(.2);
+    }
+
+    100% {
+        transform: translateX(0px) scale(1);
+    }
 }
 
+@keyframes slideUp {
+    0% {
+        transform: translateY(300px);
+    }
 
+    100% {
+        transform: translateY(0px);
+    }
+}
 
+@keyframes expand {
+    0% {
+        transform: translateX(1400px);
+    }
 
+    100% {
+        transform: translateX(0px);
+    }
+}
 
