--- a/src/styles.css
+++ b/src/styles.css
@@ -4,18 +4,45 @@
     }
 
     .button-all{
-        font-size: 16px;
+        font-size: 20px;
         display: flex;
         text-align: right;
+        text-decoration: none;  
+        border: 1px solid var(--secondary-color);
        
     }
-    
-}
 
+       
+    .title h1{
+        margin-bottom: 50px;
+        font-weight: 800px;
+        font-size: 40px;
+           
+        }
 
-h1{
-    margin-bottom: 50px;
-}
+    .container_content_inner 
+    {
+                 
+    padding-top: -70px;
+    margin-top: 80px;
+        
+    }
+
+        .img-inner {
+        
+            max-width: 400px;
+            margin-top: 0;
+            line-height: 2.5px;
+            
+            }
+
+    .container-head{
+        margin-top: 0 auto;
+        padding-bottom: 2px;
+        padding: 0%;
+  
+    }
+
 
 .container_img{
     max-width: 600px;
@@ -23,6 +50,7 @@ h1{
     height: auto;
     display: block;
     margin: 0 auto;
+}
 }
 
 
@@ -49,10 +77,9 @@ h1{
     height: 100vh;
     justify-content: space-around;
     align-items: center;
-    color: #fff;
     animation: expand .8s ease forwards;
     background-color: var(--secondary-color);
-    margin-top:10;
+    margin-top:-47px;
     position: relative;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     transition: all .8s ease;
@@ -69,7 +96,8 @@ h1{
 .container_content_inner {
     width: 85%;
     margin-left: 30px;
-    padding-top: 0;
+    padding-top: 20px;
+   
 }
 
 .container_outer_img {
@@ -82,15 +110,19 @@ h1{
     width: 100%;
     animation: slideIn 1.0s ease-in-out forwards;
     max-width: 600px;
+    border-radius: 6px;
 }
 
 .par{
-    height: auto;
+   
     overflow: hidden;
     text-align: center;
     font-size: 20px;
     margin-top: 5px;
-    margin-bottom: 60px;
+    margin-bottom: 5px;
+    padding-top: 0;
+ 
+   
     
 }
 
@@ -114,7 +146,6 @@ p {
         overflow: hidden;
         margin-bottom: 10px;
         background: transparent;
-            border: 1px solid var(--contrast-color);
             border-radius: 50px;
             padding: 8px 12px;
             color: #BF307F;
@@ -171,6 +202,9 @@ h1 {
     transform: translateY(100px);
     animation: slideUp .20s ease forwards .25s;
     margin-top: -10px;
+
+        font-weight: 800px;
+        font-size: 60px;
  
     
 }
