--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,11 @@
        
     }
 
+      
+
+
        
-    .title h1{
+    .title h2{
         margin-bottom: 50px;
         font-weight: 800px;
         font-size: 40px;
@@ -68,8 +71,8 @@
     right: 0;
     bottom: 0;
     height: 100%;
-    z-index: -10;
-    background-color: var(--contrast-color);
+
+
 }
 
 .container {
@@ -126,6 +129,8 @@
     
 }
 
+
+
 p {
     line-height: 28px;
     transform: translateY(300px);
@@ -148,7 +153,7 @@ p {
         background: transparent;
             border-radius: 50px;
             padding: 8px 12px;
-            color: #BF307F;
+            color:var(--contrast-color);
             font-size: 25px;
             text-transform: uppercase;
             position: relative;
@@ -161,7 +166,7 @@ p {
 
 .button-all:hover {
 
-    background-color: var(--secondary-color);
+    background-color: var(--contrast-color);
     padding-top: 0;
     text-decoration: none;
     margin-top: 30px;
@@ -175,12 +180,23 @@ p {
    
 }
 
+ .btns .my-work{
+    display: flex;
+    margin: 0 auto;
+}
+
+.web{
+    color: black;
+    font-size: 16px;
+    font-style: italic;
+}
+
 .btns_more {
     background: transparent;
     border: 1px solid var(--contrast-color);
     border-radius: 50px;
     padding: 8px 12px;
-    color: #BF307F;
+    color: var(--contrast-color);
     font-size: 16px;
     text-transform: uppercase;
     position: relative;
@@ -195,7 +211,7 @@ p {
     height: auto;
 }
 
-h1 {
+h2 {
     font-size: 40px;
     color: var(--contrast-color);
     margin-bottom: 20px;
