--- a/src/styles.css
+++ b/src/styles.css
@@ -3,23 +3,24 @@
         font-size: 4px;
     }
 
-    .button-all{
-        font-size: 20px;
+    .par a{
+        font-size: 16px;
         display: flex;
         text-align: right;
         text-decoration: none;  
-        border: 1px solid var(--secondary-color);
+        
        
     }
 
-      
+    h1{
+        margin-top: 20px;
+    }
 
-
-       
+           
     .title h2{
-        margin-bottom: 50px;
+        margin-bottom: 5px;
         font-weight: 800px;
-        font-size: 40px;
+        font-size: 20px;
            
         }
 
@@ -49,12 +50,15 @@
 
 .container_img{
     max-width: 600px;
-    width: 100%;
+    
     height: auto;
     display: block;
     margin: 0 auto;
+    margin-bottom: 300px;
 }
 }
+
+
 
 
 
@@ -121,7 +125,7 @@
     overflow: hidden;
     text-align: center;
     font-size: 20px;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom: 5px;
     padding-top: 0;
  
@@ -138,68 +142,46 @@ p {
 }
 
 .btns {
-    height: 100%;
-    position: relative;
-    width: 150px;
-    overflow: hidden;
-}
-
-.button-all{
-    height: 100%;
-        position: relative;
-        width: 150px;
-        overflow: hidden;
-        margin-bottom: 10px;
-        background: transparent;
-            border-radius: 50px;
-            padding: 8px 12px;
-            color:var(--contrast-color);
-            font-size: 25px;
-            text-transform: uppercase;
-            position: relative;
-            margin-top: 15px;
-            outline: none;
-            transform: translateY(50px);
-            animation: slideUp .8s ease-in-out forwards 1s;
-
-}
-
-.button-all:hover {
-
-    background-color: var(--contrast-color);
-    padding-top: 0;
-    text-decoration: none;
-    margin-top: 30px;
-    margin-bottom: 0;
-   
-    
-}
-
-.button-all a{
-    text-decoration: none;
-   
-}
-
- .btns .my-work{
-    display: flex;
     margin: 0 auto;
+    display: block;
+    height: 100%;
+    width: 250px;
+    overflow: hidden;
+  
+   
 }
+
+ .par a {
+     font-size: 20px;
+     text-align: center;
+     text-decoration: none;
+     padding-right: 30px;
+     margin-top: 20px;
+     margin-bottom: 20px;
+   
+
+ }
+
+ .par a:hover{
+    transition: all 200ms ease-in-out;
+    color: yellow;
+ }
+
 
 .web{
-    color: black;
+    color:white;
     font-size: 16px;
     font-style: italic;
+    text-align: center;
 }
 
 .btns_more {
     background: transparent;
-    border: 1px solid var(--contrast-color);
+    border: 1px solid blue;
     border-radius: 50px;
     padding: 8px 12px;
-    color: var(--contrast-color);
+    color: white;
     font-size: 16px;
-    text-transform: uppercase;
-    position: relative;
     margin-top: 15px;
     outline: none;
     transform: translateY(50px);
@@ -211,19 +193,39 @@ p {
     height: auto;
 }
 
+.card-title{
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+
+.card-body{
+    margin-bottom: 20px;
+}
+
+.card{
+    margin-left: 40px;
+}
+
+
+
 h2 {
-    font-size: 40px;
-    color: var(--contrast-color);
+    font-size: 30px;
+    color: blue;
     margin-bottom: 20px;
     transform: translateY(100px);
     animation: slideUp .20s ease forwards .25s;
-    margin-top: -10px;
+    margin-top: 10px;
 
         font-weight: 800px;
-        font-size: 60px;
+
  
     
 }
+
+
 
 @keyframes slideIn {
     0% {
